# opal-uefi-greeter

./: Cargo.toml  build-pba.sh  config-example.toml  flash  readme.md
.cargo/: config
configtest/: Cargo.toml
configtest/src/: main.rs
opal/: Cargo.toml
opal/src/: command.rs  defs.rs  io.rs  lib.rs  session.rs  util.rs
scripts/: runner.sh
src/: config.rs  dp_to_text.rs  error.rs  input.rs  io.rs  main.rs  nvme_device.rs  secure_device.rs  ui.rs  unlock_opal.rs  util.rs
src/low_level/: ata_passthru.rs  mod.rs  nvme_device.rs  nvme_passthru.rs  secure_device.rs
src/low_level/opal/: command.rs  mod.rs  session.rs
src/opal/: session.rs
