[package]
name = 'opal-uefi-greeter'
version = '0.1.0'
authors = ['Anton Bulakh <self@necauqua.dev>']
edition = '2018'
license = 'MIT'

[dependencies]
rlibc = '1.0'

wchar = '0.11'
uefi = { version = "0.16", features = ["exts", "logger"] }
uefi-services = '0.13'

bitflags = '1.2'
seq-macro = '0.2'

pbkdf2 = { version = "0.9.0", default-features = false }
sha-1 = { version = "0.9", default-features = false, features = ['force-soft'] }
hmac = { version = "0.11", default-features = false }

log = { version = '0.4', default-features = false }
