[package]
name = "configtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", default-features = false, features = ["derive", "alloc"] }
# fork with no-std support
toml = { git = "https://github.com/diondokter/toml-rs", default-features = false }
log = { version = '0.4', default-features = false, features = ["serde"] }
