[package]
name = "configtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", default-features = false, features = ["derive", "alloc"] }
# fork with no-std support
toml = { git = "https://github.com/diondokter/toml-rs" }
log = { version = '0.4', default-features = false, features = ["serde"] }
env_logger = "0.9.0"
luks2 = "0.5.0"
lvm2 = "0.0.3"
ext4 = { version = "0.10.0" }
positioned-io2 = "0.3.4"
sha-1 = "0.10.0"
bootsector = "0.2.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs" }
io-compat = { git = "https://github.com/main--/rust-io-compat" }
acid_io = "0.1.0"
either = "1.8.0"

[patch.crates-io]
acid_io = { git = "https://github.com/oberien/acid_io" }
positioned-io2 = { git = "https://github.com/oberien/positioned-io2", branch = "no_std" }
ext4 = { git = "https://github.com/oberien/ext4-rs", branch = "no_std" }
#ext4 = { path = "../ext4-rs" }
luks2 = { git = "https://github.com/oberien/luks2" }
#luks2 = { path = "../../luks2" }
xts-mode = { git = "https://github.com/oberien/xts-mode" }
bootsector = { git = "https://github.com/oberien/bootsector" }
#lvm2 = { path = "../rust-lvm2" }
