[package]
name = "opal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.0", features = [] }
byteorder = { version = "1.4.3", default-features = false }
crypto-common = "0.1.6"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha1 = { version = "0.10.5", default-features = false }
snafu = { version = "0.7.5", default-features = false, features = ["rust_1_61"] }
tracing = { version = "0.1.37", default-features = false }
uefi-raw = "0.3.0"
